plugins {
	id 'application'
	id 'org.springframework.boot' version "${springBootVersion}"
}
apply plugin: 'io.spring.dependency-management'

group = 'cf.dbaltor'

application {
    mainClassName = 'registry.ServiceRegistryApplication'
}

applicationDefaultJvmArgs = ["--enable-preview"]

sourceCompatibility = 11
targetCompatibility = 11

ext {
	set('springCloudVersion', "Hoxton.SR6")
}
dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}
dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
}
